[MEDI-83] implement user detail scheule (#67)
* [MEDI-76] feat: implement user detail schedule

* [MEDI-76]  Comment out unused USER case and limit expert schedule query to top 1

* [MEDI-76] refactor: modify summary tag

* [MEDI-83] fix: modify field

* [MEDI-83] refactor: add override